# Cellular-Automata

./: .gitignore  CMakeLists.txt  Cellular-Automata.sln  README.md
Cellular-Automata/: Cellular-Automata.cpp  Cellular-Automata.vcxproj  Cellular-Automata.vcxproj.filters  stdafx.cpp
Source/: Cellular-Automata.vcxproj  Cellular-Automata.vcxproj.filters  application.cpp  application.h  cellularautomata.cpp  cellularautomata.h  cellularautomaton.cpp  cellularautomaton.h  main.cpp
Source/Brians Brain/: briansbrain.cpp  briansbrain.h
Source/BriansBrain/: briansbrain.cpp  briansbrain.h
Source/Custom/: custom.cpp  custom.h
Source/Game of Life/: gameoflife.cpp  gameoflife.h
Source/Util/: config.cpp  config.h  random.cpp  random.h
src/: application.h  main.cpp
src/BriansBrain/: briansbrain.cpp  briansbrain.h
src/Util/: config.cpp  config.h  random.cpp
